# sen6x-rs

./: .changelog.js  .gitignore  .versionrc.json  CHANGELOG.md  Cargo.toml  README.md
.github/: check_commits.yaml
.github/workflows/: cargo_test.yml  check_commits.yml  prepare-release.yml  publish-release.yml  release-on-approval.yml
examples/esp32-embassy/: Cargo.toml  Embed.toml
examples/esp32-embassy/.cargo/: config.toml
examples/esp32-embassy/src/: main.rs
sen6x/: Cargo.toml  build.rs
sen6x-driver/: Cargo.toml
sen6x-driver/src/: commands.rs  connection.rs  connection_async.rs  connection_sync.rs  errors.rs  io.rs  lib.rs  types.rs
sen6x-macros/: Cargo.toml
sen6x-macros/src/: lib.rs
sen6x/src/: commands.rs  connection.rs  embassy.rs  embeded_hal.rs  embeded_hal_async.rs  errors.rs  lib.rs  types.rs
