[package]
name = "sen6x-driver"
version = ""
edition = "2024"
authors = ["Nikolai Filchenko <finomen812@gmail.com>"]
license = "MIT"
description = "embedded-hal driver for the sensirion sen6x sensors"
documentation = "https://docs.rs/sen6x-driver"
repository = "https://github.com/finomen/sen6x-rs"
keywords = ["airquality", "sen6x", "sensirion", "sensor"]
categories = ["embedded", "no-std"]
readme = "../README.md"
rust-version = "1.85"

[lib]
name = "sen6x"

[features]
default = []
embedded-hal = ["dep:embedded-hal"]
embedded-hal-async = ["dep:embedded-hal", "dep:embedded-hal-async", "sensirion-i2c/embedded-hal-async"]
embassy = ["dep:embassy-sync", "dep:embassy-time", "embedded-hal-async"]
serde = ["dep:serde"]

[dependencies]
embedded-hal = { version = "1", optional = true }
embedded-hal-async = { version = "1", optional = true }
sensirion-i2c = "0.4.0"
embassy-sync = {  version = "0.8.0", optional = true }
embassy-time = { version = "0.5.1", optional = true}
sen6x-macros = { version = "", path = "../sen6x-macros" }
fixed_str = { version = "0.9.1", default-features = false }
bitrs = "0.10.0"
thiserror-no-std = "2.0.2"
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
embedded-hal-mock = { version = "0.11", default-features = false, features = ["eh1"] }


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]