[package]
name = "sen6x-macros"
version = ""
edition = "2024"
authors = ["Nikolai Filchenko <finomen812@gmail.com>"]
license = "MIT"
description = "Procedural macros for the sen6x-rs driver"
repository = "https://github.com/finomen/sen6x-rs"
rust-version = "1.85"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0.45"
stringcase = "0.4.0"
