[package]
name = "sen6x-example-esp32-embassy"
version = "0.0.1"
edition = "2021"

[dependencies]
esp-hal = { version = "1.1.1", features = ["esp32c5", "unstable"] }
esp-rtos = { version = "0.3.0", features = ["embassy", "esp32c5", "esp-radio", "esp-alloc"] }
esp-alloc = { version = "0.10.0" }
esp-phy = { version = "0.2.0", features = ["esp32c5"] }
esp-backtrace = { version = "0.19.0", features = [
    "esp32c5",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.17.0", default-features = false, features = ["esp32c5", "log-04", "jtag-serial"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c5"] }
embassy-executor = { version = "0.10.0", features = ["executor-thread"] }
embassy-time = { version = "0.5.1" }
embassy-sync = "0.8.0"

log = { version = "0.4", default-features = false }
heapless = { version = "0.8", default-features = false }
static_cell = "2.1"
embedded-svc = { version = "0.29", default-features = false }
trouble-host = { version = "0.1", default-features = false, features = ["peripheral"] }

embassy-embedded-hal = "0.6"
esp-metadata-generated = { version = "0.4.0", features = ["esp32c5"] }

embedded-hal-async = "1.0.0"
embedded-hal = "1.0.0"

sen6x = { path = "../../sen6x", features = ["embassy"]}

fixed_str = { version = "0.9.1", default-features = false }
embassy-futures = "0.1.2"

